fix: repair build, close open API, and correct the domain layer
The project did not compile before this change. Two independent blockers:

  * pom.xml declared org.flywaydb:flyway-database-postgresql with no version.
    Spring Boot 3.2.5 manages Flyway 9.22.3, whose BOM has no such artifact --
    the module only exists from Flyway 10, and 9.x keeps PostgreSQL support in
    flyway-core. Maven could not read the POM at all.
  * CustomerSupportAgent inferred ArrayList<SystemMessage> from a single-element
    List.of(), then called addAll(List<ChatMessage>) on it. The AI chat feature
    has never compiled.

Security
  * /api/** was permitAll() with CSRF disabled. That published every user's
    BCrypt hash via GET /api/users, allowed anonymous password changes on any
    account via PUT /api/users/{id}, and left product writes, order creation
    and refunds open. Replaced with a stateless JWT chain and an explicit
    authorization matrix; CSRF stays off only because the chain is stateless.
  * Both /updateuser handlers took the target account from a hidden userid form
    field, so any authenticated user could post userid=1 and take over the
    administrator. The account is now resolved from the security context.
  * Deleted cartproduct.jsp, which opened a hardcoded root@mysql connection
    from inside the view and printed raw exception text to the page.
  * Entities are no longer serialised to JSON. User.password is @JsonIgnore and
    every endpoint returns a DTO.
  * Admins now hold ROLE_USER as well; previously they were locked out of every
    storefront page. Logout is POST-only. Timing-based username enumeration is
    closed via hideUserNotFoundExceptions.

Correctness
  * Product.category was @OneToOne(cascade = ALL): wrong cardinality, and
    deleting a product cascade-deleted the category other products referenced.
    Now @ManyToOne with no cascade.
  * Order and OrderItem had no Jackson back-reference, so GET /api/orders/{id}
    recursed until it 