@@ -2,12 +2,14 @@ package com.jtspringproject.JtSpringProject.services;
 
 import java.util.List;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import com.jtspringproject.JtSpringProject.dao.userDao;
+import com.jtspringproject.JtSpringProject.exception.BusinessRuleException;
+import com.jtspringproject.JtSpringProject.exception.ResourceNotFoundException;
 import com.jtspringproject.JtSpringProject.models.User;
 
 @Service
@@ -15,64 +17,107 @@ public class userService {
 	private final userDao userDao;
 	private final PasswordEncoder passwordEncoder;
 
-	@Autowired
 	public userService(userDao userDao, PasswordEncoder passwordEncoder) {
 		this.userDao = userDao;
 		this.passwordEncoder = passwordEncoder;
 	}
 
+	@Transactional(readOnly = true)
 	public List<User> getUsers() {
 		return this.userDao.getAllUser();
 	}
 
+	@Transactional
 	public User addUser(User user) {
 		try {
-			if (user.getPassword() != null && !isPasswordEncoded(user.getPassword())) {
-				user.setPassword(passwordEncoder.encode(user.getPassword()));
-			}
+			user.setPassword(passwordEncoder.encode(user.getPassword()));
 			return this.userDao.saveUser(user);
 		} catch (DataIntegrityViolationException e) {
-			throw new IllegalStateException("Unable to create user due to data integrity constraints.", e);
+			throw new BusinessRuleException("Username '" + user.getUsername() + "' is already taken.");
 		}
 	}
 
+	@Transactional
+	public User register(String username, String email, String rawPassword, String address) {
+		if (checkUserExists(username)) {
+			throw new BusinessRuleException("Username '" + username + "' is already taken.");
+		}
+		User user = new User();
+		user.setUsername(username);
+		user.setEmail(email);
+		user.setAddress(address);
+		user.setRole(User.ROLE_NORMAL);
+		user.setPassword(rawPassword);
+		return addUser(user);
+	}
+
+	@Transactional(readOnly = true)
 	public boolean checkUserExists(String username) {
 		return this.userDao.userExists(username);
 	}
 
+	/**
+	 * Looks a user up by username.
+	 *
+	 * <p>This previously re-hashed and re-saved plain-text passwords on read. That
+	 * ran on the unauthenticated login path - before credentials were verified - so
+	 * any request naming a known username triggered a bcrypt hash and a database
+	 * write. Seeded passwords are hashed by migration V4 instead.
+	 */
+	@Transactional(readOnly = true)
 	public User getUserByUsername(String username) {
-		User user = userDao.getUserByUsername(username);
-		if (user != null && user.getPassword() != null && !isPasswordEncoded(user.getPassword())) {
-			// Migrate legacy plain-text passwords to BCrypt when the user is loaded.
-			user.setPassword(passwordEncoder.encode(user.getPassword()));
-			userDao.saveUser(user);
-		}
-		return user;
+		return userDao.getUserByUsername(username);
 	}
 
+	@Transactional(readOnly = true)
 	public User getUserById(int id) {
 		return this.userDao.getUserById(id);
 	}
 
+	@Transactional(readOnly = true)
+	public User requireUserById(int id) {
+		User user = this.userDao.getUserById(id);
+		if (user == null) {
+			throw ResourceNotFoundException.of("User", id);
+		}
+		return user;
+	}
+
+	@Transactional(readOnly = true)
+	public User requireUserByUsername(String username) {
+		User user = this.userDao.getUserByUsername(username);
+		if (user == null) {
+			throw new ResourceNotFoundException("User not found: " + username);
+		}
+		return user;
+	}
+
+	/**
+	 * Updates a profile. Callers must resolve {@code userId} from the authenticated
+	 * principal, never from request input - taking it from a hidden form field let
+	 * any user rewrite any other account, including the administrator's.
+	 */
+	@Transactional
 	public User updateUserProfile(int userId, String username, String email, String password, String address) {
 		User existingUser = this.userDao.getUserById(userId);
 		if (existingUser == null) {
-			return null;
+			throw ResourceNotFoundException.of("User", userId);
 		}
 
-		existingUser.setUsername(username);
+		if (username != null && !username.equals(existingUser.getUsername())) {
+			if (this.userDao.userExists(username)) {
+				throw new BusinessRuleException("Username '" + username + "' is already taken.");
+			}
+			existingUser.setUsername(username);
+		}
+
 		existingUser.setEmail(email);
 		existingUser.setAddress(address);
 
-		if (password != null && !password.trim().isEmpty()) {
-			existingUser.setPassword(isPasswordEncoded(password) ? password : passwordEncoder.encode(password));
+		if (password != null && !password.isBlank()) {
+			existingUser.setPassword(passwordEncoder.encode(password));
 		}
 
 		return this.userDao.saveUser(existingUser);
-	}
-
-	private boolean isPasswordEncoded(String password) {
-		return password != null
-				&& (password.startsWith("$2a$") || password.startsWith("$2b$") || password.startsWith("$2y$"));
 	}
 }
